--- a/DiaryApp/Views/DiaryEntries/Index.cshtml
+++ b/DiaryApp/Views/DiaryEntries/Index.cshtml
@@ -3,8 +3,8 @@
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
     <div class="flex justify-between items-center mb-8">
         <h1 class="text-3xl max-md:text-2xl  font-bold text-white">My Diary Entries</h1>
-        <a class="bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-700 hover:to-blue-800 text-white max-md:text-small px-5 py-3 rounded-lg transition font-medium shadow-lg">
-            + New Entry
+        <a asp-action="Create" asp- class="bg-gradient-to-r from-blue-500 to-blue-600 hover:from-blue-700 hover:to-blue-800 text-white max-md:text-small px-5 py-3 rounded-lg transition font-medium shadow-lg">
+            Create New Entry
         </a>
     </div>
 
@@ -53,13 +53,10 @@
                         </div>
 
                         <div class="flex lg:flex-col gap-3 lg:gap-2 flex-shrink-0">
-                            <a  class="text-blue-400 hover:text-blue-300 font-medium transition-colors">
+                            <a asp-controller="DiaryEntries" asp-action="Edit" asp-route-id="@entry.Id"  class="text-blue-400 hover:text-blue-300 font-medium transition-colors">
                                 Edit
                             </a>
-                            <a class="text-emerald-400 hover:text-emerald-300 font-medium transition-colors">
-                                View
-                            </a>
-                            <a  class="text-rose-400 hover:text-rose-300 font-medium transition-colors">
+                            <a asp-controller="DiaryEntries" asp-action="Delete" asp-route-id="@entry.Id" class="text-rose-400 hover:text-rose-300 font-medium transition-colors">
                                 Delete
                             </a>
                         </div>
@@ -74,8 +71,8 @@
             <h3 class="text-2xl font-bold text-white">No entries yet</h3>
             <p class="mt-3 text-lg text-slate-400">Get started by creating your first diary entry.</p>
             <div class="mt-8">
-                <a  class="inline-flex items-center px-8 py-4 shadow-lg text-lg font-semibold rounded-xl text-white bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 transition-all duration-300">
-                    + New Entry
+                <a asp-action="Create" class="inline-flex items-center px-8 py-4 shadow-lg text-lg font-semibold rounded-xl text-white bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 transition-all duration-300">
+                    Create New Entry
                 </a>
             </div>
         </div>
